# clothoid_ws

./: README.md  environment.yml
devel/: .catkin
devel/include/Object_detect/: LidarClusteringConfig.h
devel/include/detect_msgs/: Objects.h  Yolo_Objects.h  detected_array.h  detected_object.h
devel/include/detect_ws/: LidarClusteringConfig.h
devel/lib/Object_detect/: object_detection_node
devel/lib/detect_ws/: object_detection_node
devel/lib/pkgconfig/: Object_detect.pc  detect_msgs.pc  detect_ws.pc  yolov8.pc  yolov8_ws.pc
devel/lib/python3/dist-packages/Object_detect/cfg/: LidarClusteringConfig.py
devel/lib/python3/dist-packages/detect_msgs/msg/: _Objects.py  _Yolo_Objects.py  __init__.py  _detected_array.py  _detected_object.py
devel/lib/python3/dist-packages/detect_ws/cfg/: LidarClusteringConfig.py
devel/share/Object_detect/cmake/: Object_detectConfig.cmake
devel/share/Object_detect/docs/: LidarClusteringConfig-usage.dox  LidarClusteringConfig.dox  LidarClusteringConfig.wikidoc
devel/share/common-lisp/ros/detect_msgs/msg/: Objects.lisp  Yolo_Objects.lisp  _package.lisp  _package_Objects.lisp  _package_Yolo_Objects.lisp  _package_detected_array.lisp  _package_detected_object.lisp  detect_msgs-msg.asd  detected_array.lisp  detected_object.lisp
devel/share/detect_msgs/cmake/: detect_msgs-msg-extras.cmake  detect_msgs-msg-paths.cmake  detect_msgsConfig.cmake
devel/share/detect_ws/cmake/: detect_wsConfig.cmake
devel/share/detect_ws/docs/: LidarClusteringConfig-usage.dox
devel/share/gennodejs/ros/detect_msgs/msg/: Objects.js  Yolo_Objects.js  _index.js  detected_array.js  detected_object.js
devel/share/roseus/ros/detect_msgs/: manifest.l
devel/share/roseus/ros/detect_msgs/msg/: Objects.l  Yolo_Objects.l  detected_array.l  detected_object.l
devel/share/yolov8/cmake/: yolov8Config.cmake
devel/share/yolov8_ws/cmake/: yolov8_wsConfig.cmake
src/Object_detect/: CMakeLists.txt  package.xml
src/Object_detect/cfg/: LidarClustering.cfg
src/Object_detect/launch/: detect.launch
src/Object_detect/scripts/: euclidean_clustering.py
src/Object_detect/src/: detection.cpp  main.cpp
src/detect_msgs/: CMakeLists.txt  package.xml
src/detect_msgs/msg/: Objects.msg  Yolo_Objects.msg
src/detect_ws/: CMakeLists.txt  package.xml
src/detect_ws/include/: detection.h
src/detect_ws/launch/: detect.launch
src/detect_ws/src/: detection.cpp
src/yolov8/: CMakeLists.txt  best.yaml  package.xml
src/yolov8/launch/: yolo_detect.launch
src/yolov8/scripts/: yolo_detect.py
src/yolov8_ws/: CMakeLists.txt  best.yaml
src/yolov8_ws/launch/: yolo_detect.launch
yolov8_prune/ultralytics.egg-info/: PKG-INFO  SOURCES.txt
