<?xml version="1.0"?>
<package format="2">
  <name>Object_detect</name>
  <version>0.0.1</version>
  <description>LiDAR-Camera 객체 검출 패키지</description>

  <maintainer email="a@todo.todo">a</maintainer>
  <license>BSD</license>

  <!-- 빌드 도구 -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- 빌드 및 실행 의존성 -->
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>pcl_ros</depend>
  <depend>message_filters</depend>
  <depend>detect_msgs</depend>           <!-- ✅ 메시지 타입 사용 -->
  <depend>message_runtime</depend>       <!-- ✅ 메시지 런타임 의존성 -->
  
  
  
  <depend>dynamic_reconfigure</depend>

  <export>
  </export>
</package>

